--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout android:id="@+id/rv"
              xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="720px"
+             android:layout_width="640px"
+             android:layout_marginLeft="40px"
              android:layout_height="1134px"
              android:orientation="vertical"
              android:splitMotionEvents="false"
@@ -67,17 +68,21 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="30px"
+                android:layout_marginLeft="15px"
+                android:layout_marginRight="15px"
+                android:layout_marginBottom="25px"
+                android:layout_gravity="center"
                 android:splitMotionEvents="false"
                 >
 
 
                 <Button
                     android:id="@+id/btnOk"
-                    android:layout_width="320px"
+                    android:layout_width="220px"
                     android:layout_height="83px"
-                    android:layout_alignParentRight="true"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/new_orange_btn_corner_selector"
+                    android:layout_marginLeft="280px"
+                    android:background="@drawable/new_orange_btn_selector_rounded"
                     android:singleLine="true"
                     android:text="@string/ok"
                     android:textColor="@drawable/white_color_selector"
@@ -86,11 +91,11 @@
 
                 <Button
                     android:id="@+id/btnCancel"
-                    android:layout_width="320px"
+                    android:layout_width="220px"
                     android:layout_height="83px"
-                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="28px"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/menu_black_btn_corner_selector"
+                    android:background="@drawable/new_menu_black_btn_selector_rounded"
                     android:singleLine="true"
                     android:text="@string/cancel"
                     android:textColor="@drawable/white_color_selector"
