feature_login_using_phone_no: login using phone number added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_login.xml
@@ -85,7 +85,7 @@
                     android:layout_marginBottom="2px"
                     android:layout_marginRight="2px"
                     android:background="@drawable/background_white"
-                    android:hint="@string/email_id"
+                    android:hint="@string/phone_number_or_email"
                     android:inputType="textEmailAddress"
                     android:singleLine="true"
                     android:textColor="@color/black"
