--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -11,7 +11,8 @@
     <color name="black_grey">#575757</color>
    
    <color name="black_text_shop">#1C1C1C</color>
-   
+    <color name="nl_white_dark">#E0E0E0</color>
+
    
    <color name="white_translucent">#D8FFFFFF</color>
  <color name="white_light_dark">#EEEEEE</color>
