feature_tri_city_supply: UI created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -2358,6 +2358,8 @@
                         android:background="@drawable/line_menu"/>
                 </RelativeLayout>
 
+
+
                 <RelativeLayout
                     android:id="@+id/notificationCenterRl"
                     android:layout_width="match_parent"
@@ -2400,6 +2402,38 @@
                         android:text="@string/call_us"
                         android:textColor="@color/white"
                         android:textSize="34px"/>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="4px"
+                        android:layout_alignParentBottom="true"
+                        android:background="@drawable/line_menu"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayoutDestination"
+                    android:layout_width="match_parent"
+                    android:layout_height="84px"
+                    android:background="@drawable/menu_item_selector"
+                    android:splitMotionEvents="false">
+
+                    <TextView
+                        android:id="@+id/textViewDestination"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="42px"
+                        android:text="Destination"
+                        android:textColor="@color/white"
+                        android:textSize="34px"/>
+
+                    <ImageView
+                        android:layout_width="50px"
+                        android:layout_height="50px"
+                        android:layout_marginLeft="40px"
+                        android:layout_toRightOf="@+id/textViewDestination"
+                        android:src="@drawable/new_icon"
+                        android:tag="mwar"/>
 
                     <ImageView
                         android:layout_width="match_parent"
