--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -86,7 +86,7 @@
                     android:layout_marginTop="2px"
                     android:background="@drawable/background_white"
                     android:hint="@string/phone_number"
-                    android:inputType="textEmailAddress"
+                    android:inputType="number"
                     android:singleLine="true"
                     android:textColor="@color/black"
                     android:textSize="34px"/>
@@ -107,7 +107,7 @@
                     android:layout_height="64px"
                     android:layout_gravity="center"
                     android:layout_marginLeft="6px"
-                    android:background="@drawable/ic_password"/>
+                    android:background="@drawable/otp_icon"/>
 
                 <ImageView
                     android:layout_width="2px"
